[tool.poetry]
name = "vvicorn"
version = "0.1.0"
description = ""
authors = ["尼维森莫·纳默帝敖 <icocoabeans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ulogcorn = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
